--- a/enterprice/search/templates/base.html
+++ b/enterprice/search/templates/base.html
@@ -10,19 +10,37 @@
 <body>
 {% block menu %}
 
-<h2 style="text-align: center";>эта страница бэйс!! тут будут разные ссылки и контент в шапке</h2>
- {% for m in menu %}
-          <li ><a href="{% url m.url_name %}">{{ m.title }}</a></li>
-        {% endfor %}
+<h2 style="text-align: center" ;>эта страница бэйс!! тут будут разные ссылки и контент в шапке</h2>
+{% for m in menu %}
+<li><a href="{% url m.url_name %}">{{ m.title }}</a></li>
+{% endfor %}
 
+{% endblock %}
+<table>
+<tr>
+  <th>Company</th>
+  <th>Q1</th>
+  <th>Q2</th>
+  <th>Q3</th>
+  <th>Q4</th>
+  <th>Q4</th>
+  <th>Q4</th>
+  <th>Q4</th>
+
+</tr>
 {% for r in remains %}
-   <p> {{ r.article }}   {{ r.title }}   {{ r.quantity }}</p>
-    {% endfor %}
-
-
-{% endblock menu %}
-
-
+<tr>
+   <td>{{r.comment}}</td>
+   <td>{{r.code}}</td>
+   <td>{{r.article}}</td>
+   <td>{{r.party}}</td>
+   <td>{{r.title}}</td>
+   <td>{{r.base_unit}}</td>
+   <td>{{r.project}}</td>
+   <td>{{r.quantity}}</td>
+</tr>
+{% endfor %}
+</table>
 
 
 
