Сделал поиск по нескольким условиям

--- a/enterprice/search/static/css/style.css
+++ b/enterprice/search/static/css/style.css
@@ -1,4 +1,14 @@
+.details_div{
 
+    max-width: 500px;
+
+
+
+}
+.container{
+    display: flex;
+
+}
 .wrapper header {
     height: 50px;
     border: 2px solid blueviolet;
@@ -23,6 +33,7 @@
     justify-content: left;
 }
 table {
+
     font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
     font-size: 14px;
     border-radius: 10px;
