детализация товара модернизания

--- a/enterprice/search/templates/details.html
+++ b/enterprice/search/templates/details.html
@@ -3,5 +3,12 @@
 {% block detail %}
 
     <a href="{% url 'find' %}">Назад</a>
-
+     <div class="details_div">
+         Детализация
+          {% for d in det %}
+              {{ d.title }}
+              {{ d.article }}
+              {{ d.count }}
+          {% endfor %}
+         </div>
 {% endblock %}
