--- a/enterprice/search/templates/search.html
+++ b/enterprice/search/templates/search.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+
+
 <title>{{ title }}</title>
 {% block search %}
     <div class="input_wrapper">
@@ -28,7 +30,7 @@
                         <td>{{ r.code }}</td>
                         <td>{{ r.article }}</td>
                         <td>{{ r.party }}</td>
-                        <td><a href="{% url 'details' %}">{{ r.title }}</a></td>
+                        <td><a href="{% url 'details' r.id %}">{{ r.title }}</a></td>
                         <td>{{ r.base_unit }}</td>
                         <td>{{ r.project }}</td>
                         <td>{{ r.quantity }}</td>
@@ -36,17 +38,11 @@
                 {% endfor %}
             </table>
         </div>
-        <div class="details_div">
-            Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее
-            осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в
-            домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. Текст
-            генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст
-            более привлекательным и живым для визуально-слухового восприятия.
-            По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых людей
-            недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит
-            любой макет непонятным смыслом и придаст неповторимый колорит советских времен.
-        </div>
+
     </div>
+        {% block detail %}
+        {% endblock %}
+
 {% endblock %}
 
 
