--- a/enterprice/search/templates/details.html
+++ b/enterprice/search/templates/details.html
@@ -2,13 +2,20 @@
 <title>{{ title }}</title>
 {% block detail %}
 
-    <a href="{% url 'find' %}">Назад</a>
-     <div class="details_div">
-         Детализация
-          {% for d in det %}
-              {{ d.title }}
-              {{ d.article }}
-              {{ d.count }}
-          {% endfor %}
-         </div>
+
+    <div class="details_div">
+        Детализация
+        {% for d in det %}
+            <ul style="text-align: center">
+                <li>
+                    {{ d.title }} <br>
+                    {{ d.article }} <br>
+                    {{ d.count }} <br>
+                    {{ d.project }} <br>
+                    {{ d.quantity }} <br>
+                </li>
+            </ul>
+        {% endfor %}
+     <h2>Общая сумма {{ sum }}</h2><br>
+    </div>
 {% endblock %}
