--- a/enterprice/search/templates/details.html
+++ b/enterprice/search/templates/details.html
@@ -1,7 +1,13 @@
-{% extends 'base.html' %}
-<title>{{ title }}</title>
-{% block detail %}
-
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>{{ title }}</title>
+</head>
+<body>
 
     <div class="details_div">
         Детализация
@@ -18,4 +24,5 @@
         {% endfor %}
      <h2>Общая сумма {{ sum }}</h2><br>
     </div>
-{% endblock %}
+</body>
+</html>
