--- a/enterprice/search/templates/search.html
+++ b/enterprice/search/templates/search.html
@@ -1,8 +1,14 @@
-{% extends 'base.html' %}
-
-
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
 <title>{{ title }}</title>
-{% block search %}
 <div class="input_wrapper">
     <div class="input_value">
         <form action="" method="POST">
@@ -56,9 +62,7 @@
 
         </div>
 
-{% block detail %}
-{% endblock %}
-
-{% endblock %}
+</body>
+</html>
 
 
