--- a/enterprice/search/templates/choice_project.html
+++ b/enterprice/search/templates/choice_project.html
@@ -1,25 +1,49 @@
 <!doctype html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="{% static 'css/choice_style.css' %}">
+    <title>{{ title }}</title>
 </head>
 <body>
-    <title>{{ title }}</title>
-     <div class="select_project">
-        <form action="" method="POST">
-            {% csrf_token %}
-            <select name="data_project"  multiple size="50">
-                {% for p in all_project %}
-                    <option value="{{ p }}">{{ p }}</option>
-                {% endfor %}
-            </select>
-             <input type="submit" value="Выбрать">
-        </form>
+<div class="wrapper">
+    <header class="header">
+        <div class="header_logo">
+            <img src="{% static 'img/logo.jpg' %}" alt="">
+        </div>
+          <button class="button_form_submit"
+                    type="submit" form="form_project"
+                  formaction="{% url 'choice' %}" formmethod="POST">Применить фильтр!
+          </button>
+
+        <div class="header_user_account">
+            <h3>Добро пожаловать!</h3>
+            <p>User</p>
+        </div>
+    </header>
+    <div class="container_left_center">
+        <div class="left_colum">
+
+
+        </div>
+        <div class="center_colum">
+                <form id="form_project" action="" method="POST">
+                    {% csrf_token %}
+                    {% for p in all_project %}
+                    <div>
+                        <input type="checkbox" name="data_project" value="{{ p }}"> {{ p }} <br>
+                    </div>
+                    {% endfor %}
+
+                </form>
+        </div>
     </div>
+</div>
+
 
 </body>
 </html>
