--- a/enterprice/search/templates/search.html
+++ b/enterprice/search/templates/search.html
@@ -63,7 +63,7 @@
             <div class="table_div">
                 <table>
                     <tr>
-                        <th>Коментарий</th>
+                        <th style="width: 20px ">Коментарий</th>
                         <th>Код</th>
                         <th>Артикул</th>
                         <th>Партия</th>
@@ -89,5 +89,6 @@
         </div>
     </div>
 
+</div>
 </body>
 </html>
