--- a/enterprice/search/templates/details.html
+++ b/enterprice/search/templates/details.html
@@ -7,7 +7,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{% static 'css/details_style.css' %}">
-    <title>{{ title }}</title>
+    <title> Детали </title>
 </head>
 <header class="header">
     <div class="header_logo">
@@ -28,6 +28,7 @@
             </ul>
         {% endfor %}
         <h3>Общая сумма : {{ sum }}</h3>
+        {{ name34 }}
     </div>
 </div>
 </body>
