--- a/enterprice/search/templates/main.html
+++ b/enterprice/search/templates/main.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ title }}</title>
+    <title> Главная </title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <body>
