--- a/enterprice/search/templates/update.html
+++ b/enterprice/search/templates/update.html
@@ -1,7 +1,14 @@
-{% extends 'main.html' %}
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title> Обновить </title>
+</head>
+<body>
 
-{% block update_page %}
-<title>{{ title }}</title>
 <div style="background: bisque">
     <form enctype="multipart/form-data" action="" method="POST">
     {% csrf_token %}
@@ -9,5 +16,5 @@
     <button>OK</button>
     </form>
 </div>
-
-{% endblock %}
+</body>
+</html>
