--- a/enterprice/search/templates/update.html
+++ b/enterprice/search/templates/update.html
@@ -23,6 +23,10 @@
             <button>Отправить на обработку</button>
         </form>
     </div>
+    <p class="alert">
+        Внимание!<br>
+        После отправки дождитесь  окончания загрузки!
+    </p>
 
 </div>
 
