--- a/enterprice/search/static/css/update_style.css
+++ b/enterprice/search/static/css/update_style.css
@@ -14,7 +14,7 @@
 }
 
 
-.load_file{
+.load_file {
     width: 500px;
     height: 125px;
     border: 3px solid black;
@@ -25,16 +25,25 @@
 
 }
 
-.load_file form button{
+.load_file form button {
     width: 250px;
     height: 30px;
 }
 
-.load_file form input[type='file']{
+.load_file form input[type='file'] {
     width: 300px;
     height: 20px;
 }
 
-.load_file form button:hover{
+.load_file form button:hover {
     border: 3px solid lightgreen;
 }
+
+.alert {
+    color: #f1ff32;
+    text-align: center;
+    font-family: "JetBrains Mono";
+    font-size: 20px;
+}
+
+
