--- a/enterprice/search/templates/main.html
+++ b/enterprice/search/templates/main.html
@@ -10,11 +10,12 @@
 
 <header class="header">
     <div class="header_logo">
-        <img src="{% static 'img/logo.jpg' %}" alt="">
+        <a href="{% url 'main' %}"><img src="{% static 'img/logo.jpg' %}" alt=""></a>
     </div>
 </header>
 <div class="main_wrapper">
-    19377
+    <h2>Описание</h2>
+    <p>Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: понимание сути ресурсосберегающих технологий в значительной степени обусловливает важность системы массового участия. И нет сомнений, что многие известные личности являются только методом политического участия и объективно рассмотрены соответствующими инстанциями. Лишь представители современных социальных резервов являются только методом политического участия и объявлены нарушающими общечеловеческие нормы этики и морали.</p>
 </div>
 </body>
 </html>
